# Taffy

./: .gitignore  CMakeLists.txt  README.md  Taffy.cpp  Taffy.vcxproj  Taffy.vcxproj.filters  asset.h  create_fixed_triangle  create_fixed_triangle.cpp  example_font_generator.cpp  taffy_audio_tools.cpp  taffy_compiler.cpp  taffy_font_tools.cpp  taffy_streaming.cpp
docs/: taffy-runtime-container-roadmap.md
include/: asset.h  mesh_shader_generator.cpp  overlay.h  quan.h  taffy.h  taffy_audio_tools.h  taffy_font_tools.h  taffy_streaming.h  tools.cpp  tools.h
x64/Debug/: Taffy.exe.recipe  vc143.idb
x64/Debug/Taffy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Taffy.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
